<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="pt-rBR">
    <string name="app_name">J-Hero</string>
    <string name="title_now">Agora</string>
    <string name="title_interact">Interagir</string>
    <string name="title_articles">Artigos</string>
    <string name="title_settings">Config.</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="setting_about">Sobre a J-Hero</string>
    <string name="setting_format">Formato de áudio</string>
    <string name="setting_appearance">Aparência</string>
    <string name="setting_notifications">Notificações</string>
    <string name="label_now">Agora na J-Hero</string>
    <string name="live">AO VIVO</string>
    <string name="action_lyrics">Acompanhar Letra</string>
    <string name="action_song_history">Histórico de Músicas</string>
    <string name="action_schedule">Grade de Programação</string>
    <string name="action_share">Compartilhar</string>
    <string name="title_webpage">Página</string>
    <string name="label_interact">Interaja com o DJ enviando-lhe um pedido musical e/ou um recado.</string>
    <string name="label_interact_playlist">Faça um pedido musical dentro da temática da playlist.</string>
    <string name="label_interact_name">Seu nome</string>
    <string name="label_interact_song">Música pedida</string>
    <string name="label_interact_message">Sua mensagem</string>
    <string name="interact_send">Enviar</string>
    <string name="required_field">Preencha este campo.</string>
    <string name="value_too_short">O valor é curto demais.</string>
    <string name="required_song_field">Preencha pelo menos este campo ou o seguinte.</string>
    <string name="required_message_field">Preencha pelo menos este campo ou o anterior.</string>
    <string name="interact_unavailable">Não é possível fazer pedidos a um podcast.</string>
    <string name="button_dismiss">OK</string>
    <string name="error">Erro</string>
    <string name="error_long">Ocorreu um erro desconhecido…</string>
    <string name="success">Sucesso</string>
    <string name="interact_success">Pedido enviado com sucesso. Cabe exclusivamente ao DJ no ar atendê-lo ou não.</string>
    <string name="interact_success_playlist">Pedido enviado com sucesso! Aguarde um pouco.</string>
    <string name="dj_image_description">Avatar do DJ</string>
    <string name="program_image_description">Capa do programa</string>
    <string name="playlist">Playlist</string>
    <string name="dj_string">DJ %1$s</string>
    <string name="dj_and_genre">%1$s · %2$s</string>
    <string name="search">Buscar</string>
    <string name="post_cover_image">Imagem de capa do artigo</string>
    <string name="format_mp3">MP3 320 kbps</string>
    <string name="format_aac">AAC 128 kbps</string>
    <string name="format_opus">Ogg Opus 32 kbps</string>
    <string name="appearance_system">Sistema</string>
    <string name="appearance_light">Tema claro</string>
    <string name="appearance_dark">Tema escuro</string>
    <string name="notifications_none">Nenhuma</string>
    <string name="notifications_shows">Programas</string>
    <string name="notifications_shows_articles">Programas e novos artigos</string>
    <string name="label_now_error">Mil desculpas, houve algum problema na hora de exibir o que está rolando agora na programação da J-Hero. Com sorte, é um problema temporário, e logo, logo as coisas vão se normalizar.</string>
    <string name="onesignal_notification_accent_color" tools:ignore="Typos">FF1D8AA8</string>
    <string name="posts_error">Não foi possível obter a lista de artigos. Tente novamente mais tarde.</string>
    <string name="song_cover_image">Arte de capa da música</string>
    <string name="requester_string">(pedido de &lt;b>%1$s&lt;/b>)</string>
    <string name="lyrics_missing">Ainda não temos a letra desta música…</string>
</resources>