<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.radiojhero.app.ui.webpage.WebPageFragment"
        app:icon="@drawable/ic_baseline_help_24"
        app:title="@string/setting_about" />

    <ListPreference
        app:defaultValue="mp3"
        app:entries="@array/format_entries"
        app:entryValues="@array/format_values"
        app:icon="@drawable/ic_baseline_music_note_24"
        app:key="format"
        app:title="@string/setting_format"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="light"
        app:entries="@array/appearance_entries"
        app:entryValues="@array/appearance_values"
        app:icon="@drawable/ic_baseline_brightness_4_24"
        app:key="appearance"
        app:title="@string/setting_appearance"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="none"
        app:entries="@array/notifications_entries"
        app:entryValues="@array/notifications_values"
        app:icon="@drawable/ic_baseline_notifications_24"
        app:key="notification"
        app:title="@string/setting_notifications"
        app:useSimpleSummaryProvider="true" />

    <Preference app:layout="@layout/made_by" />

</PreferenceScreen>