<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.now.NowFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/unavailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/unavailable_top_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/unavailable_left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/unavailable_right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

            <TextView
                android:id="@+id/unavailable_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/interact_unavailable"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/unavailable_right_guideline"
                app:layout_constraintStart_toStartOf="@id/unavailable_left_guideline"
                app:layout_constraintTop_toTopOf="@id/unavailable_top_guideline" />

            <TextView
                android:id="@+id/unavailable_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/interact_dj"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/unavailable_right_guideline"
                app:layout_constraintStart_toStartOf="@id/unavailable_left_guideline"
                app:layout_constraintTop_toBottomOf="@id/unavailable_heading" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/requests_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

            <TextView
                android:id="@+id/interact_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/label_interact"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toTopOf="@id/top_guideline" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_name_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_interact_name"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/interact_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_song_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_interact_song"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/edit_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_song"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:maxLength="100"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_message_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_interact_message"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/edit_song_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLength="320"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/interact_send"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/edit_message_layout" />

            <ProgressBar
                android:id="@+id/progress_indicator"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/edit_message_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>